# Diabetes_Disease_Outcome_AI_System

./: .gitignore  FILETREE.md  LICENSE.md  README.md
dl_system/client/: .env.example  Dockerfile  Home.py  README.md  pyproject.toml
dl_system/client/.streamlit/: config.toml
dl_system/client/assets/css/: style.css
dl_system/client/pages/: 1_📊_Risk_Prediction.py  2_🧠_Model_Explanation.py  3_📘_Data_Dictionary.py  4_🔍_Model_Card.py  5_⚠️_Clinical_Safety.py
dl_system/client/utils/: api.py  api_client.py  ui_components.py
ml_system/api/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run.bat
ml_system/api/core/: config.py  logging.py
ml_system/api/models/: artifacts_loader.py
ml_system/api/routers/: explain.py  health.py  predict.py
ml_system/api/schemas/: patient.py
ml_system/api/services/: explainer.py  predictor.py
ml_system/api/templates/: index.html
ml_system/api/utils/: constants.py  feature_creation.py  preprocessing.py  shap_utils.py
notebooks/: 02_preprocessing.ipynb  pyproject.toml
notebooks/studies/dl_optuna_study_v1/: study_card.md
notebooks/studies/dl_optuna_study_v10/: study_card.md
notebooks/studies/dl_optuna_study_v11/: study_card.md
notebooks/studies/dl_optuna_study_v12/: preprocessor.joblib  study_card.md
notebooks/studies/dl_optuna_study_v13/: preprocessor.joblib  study_card.md
notebooks/studies/dl_optuna_study_v14/: study_card.md
notebooks/studies/dl_optuna_study_v15/: study_card.md
notebooks/studies/dl_optuna_study_v16/: study_card.md
notebooks/studies/dl_optuna_study_v17/: study_card.md
notebooks/studies/dl_optuna_study_v18/: study_card.md
notebooks/utils/: cleaning.py  feature_selector.py  paths.py  visualisation.py
(+113 files in other folders)
