[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dython>=0.7.12",
    "fastparquet>=2025.12.0",
    "googledrivedownloader>=1.1.0",
    "huggingface-hub>=1.3.1",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "kagglehub>=0.4.1",
    "kaleido==1.2.0",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "prince>=0.16.5",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "smote-variants>=1.0.1",
    "statsmodels>=0.14.6",
    "tensorflow>=2.20.0",
    "webp>=0.4.0",
    "xgboost>=3.1.3",
]
