[project]
name = "client"
version = "0.1.0"
description = "Streamlit Client for Diabetes DL System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.41.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "plotly>=5.24.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]
