[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.1",
    "dython>=0.7.12",
    "fastparquet>=2025.12.0",
    "imbalanced-learn>=0.14.1",
    "joblib>=1.5.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "xgboost>=3.1.3",
    "kaleido>=1.2.0",
]
